--- a/react-login-page/src/Login.css
+++ b/react-login-page/src/Login.css
@@ -10,19 +10,19 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #283c63; /* Dark blue background color */
+  background-color: #ffffff; /* Dark blue background color */
 }
 
 .login-box {
-  background-color: #ffffff; /* White login box */
+  background-color: #f7dee1; /* White login box */
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Subtle box shadow */
   text-align: center;
 }
 
 h2 {
-  color: #283c63; /* Dark blue text color */
+  color: #ffffff; /* Dark blue text color */
 }
 
 input {
@@ -33,8 +33,8 @@ input {
 }
 
 button {
-  background-color: #4caf50; /* Green button color */
-  color: white;
+  background-color: #ffffff; /* Green button color */
+  color: rgb(252, 203, 203);
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -42,10 +42,10 @@ button {
 }
 
 button:hover {
-  background-color: #45a049; /* Darker green on hover */
+  background-color: #e0b6bf; /* Darker green on hover */
 }
 
 .welcome-message {
   text-align: center;
-  color: #ffffff; /* White text color */
+  color: #e4b1b1; /* White text color */
 }
